Fix a horizontal scroll bar

--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 body #credits,
 body #home {
     height: 100vh;
-    width: 100vw;
+    width: 99vw; //not 100 due to a horizontal scroll bar
     color: white;
     font-family: 'Roboto', sans-serif;
 }
@@ -10,6 +10,8 @@ body #home {
 }
 
 #home {
+    //overflow-x: hidden;
+
     body {
         background: darkslategray;
     }
@@ -287,7 +289,7 @@ body {
 
 .links {
     z-index: 100;
-    width: 100vw;
+    width: 99vw; //not 100 due to a horizontal scroll bar
     background: rgba(0, 0, 0, .6);
     left: 0;
     padding-top: 10px;
